--- a/style.css
+++ b/style.css
@@ -2,14 +2,101 @@
     margin: 0;
     scroll-behavior: smooth;
     font-family: "Figtree", sans-serif;
-    background: black;
     color: white;
 }
 
+html,
 body {
-    background: black;
+    min-height: 100%;
 }
 
-.logo {
-    height: 50px;
+body {
+    display: flex;
+    flex-direction: column;
+    background: url(./img/images/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+}
+
+/* TOP */
+.top {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.topimages {
+    width: 100%;
+    height: 250px;
+    position: relative;
+}
+
+.topbackground {
+    background-image: url(./img/images/topimage.jpg);
+    height: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    border-radius: 30px;
+    left: 20px;
+    right: 20px;
+}
+
+.toplogo {
+    background-image: url(./img/icons/roundicon.jpg);
+    height: 100px;
+    width: 100px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: 0px 0px 20px -2px #000000;
+    border-radius: 50%;
+    background-position: center;
+    position: absolute;
+    top: 60%;
+    left: calc(50% - 50px);
+}
+
+.top img {
+    width: 100%;
+}
+
+h1 {
+    margin-top: 20px;
+}
+
+h2 {
+    font-size: 18px;
+    font-weight: 200;
+    margin-top: 12px;
+}
+
+.h1andreviews {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+/* REVIEWS */
+.reviews {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(190, 190, 190, 0.203);
+    padding: 5px;
+    border-radius: 15px;
+}
+
+.reviews img {
+    height: 16px;
+    width: auto;
+    margin-right: 5px;
+}
+
+/* MAIN CONTENT */
+main {
+    flex-grow: 1;
 }
