--- a/header.css
+++ b/header.css
@@ -3,22 +3,24 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .logo {
-    height: 50px;
+    height: 60px;
     width: auto;
     cursor: pointer;
 }
 
 .menuicon {
     cursor: pointer;
+
 }
 
 .menuicon div {
-    width: 35px;
-    height: 5px;
+    width: 24px;
+    height: 2px;
     background-color: white;
     margin: 6px 0;
 }
