--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     scroll-behavior: smooth;
     font-family: "Figtree", sans-serif;
     color: white;
+    scroll-behavior: smooth;
+    scrollbar-color: #81272C rgb(0, 0, 0);
+    scrollbar-width: thin;
 }
 
 html,
@@ -13,7 +16,7 @@ body {
 body {
     display: flex;
     flex-direction: column;
-    background: url(./img/images/background.jpg);
+    background: linear-gradient(45deg, rgba(0, 0, 0, 1) 0%, rgba(10, 10, 10, 1) 100%);
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
@@ -28,34 +31,58 @@ body {
 }
 
 .topimages {
+    height: 470px;
     width: 100%;
-    height: 250px;
     position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 .topbackground {
-    background-image: url(./img/images/topimage.jpg);
-    height: 200px;
+    background-image: url(./img/images/Banner1-1.png);
+    height: 400px;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
-    position: absolute;
+    background-size: cover;
     border-radius: 30px;
-    left: 20px;
-    right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    box-shadow: 0px 0px 10px -2px #00000069;
+    border: 1px solid #81272C;
 }
 
 .toplogo {
-    background-image: url(./img/icons/roundicon.jpg);
+    background: linear-gradient(45deg, rgba(19, 17, 24, 1) 0%, rgba(32, 17, 17, 1) 100%);
     height: 100px;
     width: 100px;
     background-size: cover;
     background-repeat: no-repeat;
-    box-shadow: 0px 0px 20px -2px #000000;
+    box-shadow: 0px 0px 10px -2px #000000;
     border-radius: 50%;
     background-position: center;
     position: absolute;
-    top: 60%;
+    top: 75%;
     left: calc(50% - 50px);
+    border: 1px solid #81272C;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.toplogo:hover {
+    background: rgb(201, 201, 201);
+    text-decoration: none;
+}
+
+.toplogo p {
+    color: white;
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+
 }
 
 .top img {
@@ -70,6 +97,8 @@ h2 {
     font-size: 18px;
     font-weight: 200;
     margin-top: 12px;
+    text-align: center;
+    margin-bottom: 12px;
 }
 
 .h1andreviews {
@@ -99,4 +128,9 @@ h2 {
 /* MAIN CONTENT */
 main {
     flex-grow: 1;
+}
+
+.widthcontrol {
+    padding-left: calc(50% - 720px);
+    padding-right: calc(50% - 720px);
 }
