--- a/style.css
+++ b/style.css
@@ -56,11 +56,8 @@ body {
     background: linear-gradient(45deg, rgba(19, 17, 24, 1) 0%, rgba(32, 17, 17, 1) 100%);
     height: 100px;
     width: 100px;
-    background-size: cover;
-    background-repeat: no-repeat;
     box-shadow: 0px 0px 10px -2px #000000;
     border-radius: 50%;
-    background-position: center;
     position: absolute;
     top: 75%;
     left: calc(50% - 50px);
@@ -73,7 +70,7 @@ body {
 }
 
 .toplogo:hover {
-    background: rgb(201, 201, 201);
+    background: linear-gradient(45deg, rgb(30, 27, 37) 0%, rgb(53, 28, 28) 100%);
     text-decoration: none;
 }
 
@@ -131,6 +128,6 @@ main {
 }
 
 .widthcontrol {
-    padding-left: calc(50% - 720px);
-    padding-right: calc(50% - 720px);
+    padding-left: calc((100% - 1440px) / 2);
+    padding-right: calc((100% - 1440px) / 2);
 }
