added first javascript, fixed css, added more elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
     font-family: "Figtree", sans-serif;
     color: white;
     scroll-behavior: smooth;
-    scrollbar-color: #81272C rgb(0, 0, 0);
+    scrollbar-color: #ffffff rgb(0, 0, 0);
     scrollbar-width: thin;
 }
 
