--- a/styles/basket.css
+++ b/styles/basket.css
@@ -1,5 +1,5 @@
 .basket_closed {
-    transform: translateX(100%)!important;
+    transform: translateX(100%) !important;
     /* display: none; */
 }
 
@@ -17,6 +17,7 @@
     z-index: 20;
     transform: translateX(0);
     transition: all 0.1s linear;
+    box-shadow: -0px 0px 20px 0px #000000bc;
 }
 
 .yourbaskettitle {
@@ -52,6 +53,32 @@
     height: 1px;
     background: #202020;
     margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+.deliveryfeetext {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+}
+
+.deliveryprice {
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.subtotaltext {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    margin-bottom: 5px;
+}
+
+.subtotalprice {
+    font-size: 20px;
+    font-weight: 300;
 }
 
 .totalpricetext {
@@ -67,20 +94,24 @@
 }
 
 .orderinbasket {
-    background: linear-gradient(45deg, rgba(19, 17, 24, 1) 0%, rgba(32, 17, 17, 1) 100%);
+    background: rgb(24, 24, 24);
     border-radius: 30px;
     height: 100px;
     width: 80%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid #81272C;
     padding: 0px 20px 0px 20px;
+    margin-left: 0px;
+    flex-shrink: 0;
 }
 
 .foodimageinbasket {
     width: 40px;
-    height: auto;
+    height: 40px;
+    border-radius: 15px;
+    object-fit: cover;
+    margin-right: 10px;
 }
 
 .greyprice {
@@ -89,7 +120,7 @@
 }
 
 .foodname {
-    font-size: 18px;
+    font-size: 16spx;
     margin-bottom: 5px;
 }
 
@@ -108,6 +139,7 @@
 .numberofitems {
     display: flex;
     margin-bottom: 5px;
+    margin-left: 5px;
     gap: 5px;
     align-items: center;
 }
@@ -122,4 +154,21 @@
     margin-left: 3px;
     margin-right: 3px;
     font-size: 14px;
+}
+
+.lowerbasketsection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.basketitems {
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: auto;
+    height: 75%;
+    margin: 10px;
 }
