--- a/styles/foods.css
+++ b/styles/foods.css
@@ -1,6 +1,19 @@
+.catogory_seperator {
+    width: 100vw;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+    background: linear-gradient(45deg, rgba(19, 17, 24, 1) 0%, rgba(32, 17, 17, 1) 100%);
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
 h3 {
     font-size: 28px;
-    padding-top: 36px;
+    padding-top: 0px;
     font-weight: 600;
     color: white;
 }
@@ -30,10 +43,12 @@ h5 {
 }
 
 .foodimages {
-    height: 100px;
-    width: auto;
+    height: 125px;
+    width: 125px;
     margin-bottom: 20px;
     margin-top: 20px;
+    border-radius: 10px;
+    object-fit: cover
 }
 
 .startingprice {
@@ -52,6 +67,22 @@ h5 {
     height: 40px;
     width: 40px;
     border-radius: 50%;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.plusicon_wide p {
+    color: black;
+}
+
+.plusicon_wide {
+    background: white;
+    height: 25px;
+    width: 60px;
+    border-radius: 10px;
     color: black;
     display: flex;
     justify-content: center;
