--- a/styles/foods.css
+++ b/styles/foods.css
@@ -1,7 +1,7 @@
 .catogory_seperator {
-    width: 100vw;
-    margin-left: calc(-50vw + 50%);
-    margin-right: calc(-50vw + 50%);
+    width: 100%;
+    /* margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%); */
     background: linear-gradient(227deg, rgba(32, 17, 17, 1) 0%, rgba(16, 16, 18, 1) 72%);
     height: 70px;
     display: flex;
@@ -116,8 +116,8 @@ h5 {
 .foodarea {
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: start;
+    justify-content: center;
+    align-items: center;
     margin-left: 20px;
     margin-right: 20px;
 }
