--- a/styles/topnavbar.css
+++ b/styles/topnavbar.css
@@ -1,6 +1,6 @@
 .topnavbar {
         background: #000000;
-        width: 100vw;
+        width: 100%;
         height: 240px;
         display: flex;
         justify-content: center;
